--- a/index.css
+++ b/index.css
@@ -13,3 +13,10 @@ h3{
     color: hotpink;
     font-size: 28px;
 }
+
+li:first-child{
+    background-color: red;
+    text-align: center;
+    font-size: 50px;
+    color: white;
+}
